# Apotheclean

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  package-lock.json  pyproject.toml
.agent/rules/: apotheclean-rules.md  code-style-guide.md  frontend-style-guide.md
backend/: .dockerignore  pyproject.toml
backend/data/: farmacia.db
backend/scripts/: crear_admin.py  test_db_resilience.py  verify_rotation.py
backend/src/: main.py
backend/src/infraestructure/: resilience.py
backend/tests/unit/: __init__.py
frontend/: Dockerfile  nginx.conf  package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.api.ts  client.ts  products.api.ts  sales.api.ts
frontend/src/routes/: ProtectedRoute.tsx
scripts/: test_db.py
src/: main.py
src/application/ports/: auth.py  cache.py  repositories.py
src/application/use_cases/: productos.py  usuarios.py  ventas.py
src/domain/: entities.py
src/infraestructure/adapters/: sqlalchemy_producto_repository.py  sqlalchemy_usuario_repository.py  sqlalchemy_venta_repository.py
src/infraestructure/api/: __init__.py  app.py  decorators.py
src/infraestructure/auth/: __init__.py  jwt_auth_adapter.py
src/infraestructure/cache/: __init__.py  config.py  redis_cache_adapter.py  redis_carrito_adapter.py
src/infraestructure/storage/: __init__.py  filesystem_image_adapter.py
tests/unit/application/: test_productos.py  test_usuarios.py  test_ventas.py
tests/unit/domain/: __init__.py  test_entities.py
tests/unit/infraestructure/: test_jwt_auth.py
(+58 files in other folders)
